--- a/ManageDormitory/ManageDormitory.vcxproj
+++ b/ManageDormitory/ManageDormitory.vcxproj
@@ -131,8 +131,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DataStructure.h" />
-    <ClInclude Include="MANAGESTUDENT.h" />
-    <ClInclude Include="STUDENT.h" />
+    <ClInclude Include="ManageRoom.h" />
+    <ClInclude Include="ManageStudent.h" />
+    <ClInclude Include="Room.h" />
+    <ClInclude Include="Student.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
