sua ten file cpp thanh main.cpp

--- a/ManageDormitory/ManageDormitory.vcxproj
+++ b/ManageDormitory/ManageDormitory.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="ManageDormitory.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DataStructure.h" />
