Bổ sung Date.h để kiểm tra ngày tháng năm và Sort.h để sắp xếp sv bằng merge sort

--- a/ManageDormitory/ManageDormitory.vcxproj.filters
+++ b/ManageDormitory/ManageDormitory.vcxproj.filters
@@ -35,5 +35,11 @@
     <ClInclude Include="Room.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Sort.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Date.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
