--- a/ManageDormitory/ManageDormitory.vcxproj
+++ b/ManageDormitory/ManageDormitory.vcxproj
@@ -131,9 +131,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DataStructure.h" />
+    <ClInclude Include="Date.h" />
     <ClInclude Include="ManageRoom.h" />
     <ClInclude Include="ManageStudent.h" />
     <ClInclude Include="Room.h" />
+    <ClInclude Include="Sort.h" />
     <ClInclude Include="Student.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
