--- a/ManageDormitory/ManageDormitory.vcxproj.filters
+++ b/ManageDormitory/ManageDormitory.vcxproj.filters
@@ -23,7 +23,7 @@
     <ClInclude Include="Student.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="DataStructure.h">
+    <ClInclude Include="Node.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ManageStudent.h">
@@ -39,6 +39,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Date.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ManageHiringRoom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="NodeTree.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
