--- a/ManageDormitory/ManageDormitory.vcxproj.filters
+++ b/ManageDormitory/ManageDormitory.vcxproj.filters
@@ -50,5 +50,8 @@
     <ClInclude Include="Database.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ConsoleUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
