--- a/ManageDormitory/ManageDormitory.vcxproj
+++ b/ManageDormitory/ManageDormitory.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ConsoleUI.h" />
     <ClInclude Include="Database.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="Date.h" />
